--- a/todo-app/frontend/src/template/custom.css
+++ b/todo-app/frontend/src/template/custom.css
@@ -7,6 +7,13 @@
 }
 
 body {
-  background-color: #000;
+  background-color: #888;
 }
 
+.todoForm {
+  padding-bottom: 60px;
+}
+
+.actionButtons {
+  width: 105px;
+}
